--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   cloud_firestore: ^0.16.0+1
   firebase_core: ^0.7.0
   provider: ^4.0.0
+  flutter_spinkit: "^4.1.2"
 
   
 dev_dependencies:
